# phpipam_exporter

./: .bumpversion.cfg  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: devel.yml  python-package.yml  release.yml
phpipam_exporter/: __init__.py  cli.py
phpipam_exporter/libs/: api.py  ipam.py
phpipam_exporter/templates/: dhcpd.j2  dnsmasq.j2  hosts.j2  json.j2
tests/: __init__.py  addresses.json  test_phpipam_exporter.py
tests/results/: dhcpd.txt  dnsmasq.txt  hosts.txt
