[tool]
[tool.poetry]
name = "phpipam_exporter"
version = "0.2.0"
homepage = "https://github.com/BlackSmith/phpipam_exporter"
description = "Top-level package for phpipam-exporter."
authors = ["Martin Korbel <git@blackserver.cz>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "phpipam_exporter" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7"
click = "*"
certifi = "^2020.12.5"
Jinja2 = "^3.0.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
bumpversion = "*"
flake8 = "*"
pylint = "*"
pytest = "*"
mock = "^4.0.3"
readme-renderer = "^29.0"

[tool.poetry.scripts]
phpipam_export = 'phpipam_exporter.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
#    'error',
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore::DeprecationWarning:urllib3',
]
